rtsp-server: Fix rtsp-media-factory handling of url.

Patched per bomba_____:
https://gitlab.freedesktop.org/gstreamer/gst-rtsp-server/-/issues/21
to resolve
ERROR rtsp-client.c:1718:handle_play_request: [...] media not found